Failing checkstyle fails the build.
Update checkstyle rules to be more in tune with the more modern Commons
components. Main changes: no more solo '{' and longer line lengths.